--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                     <th colspan="4">Request</th>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Tiến trình</td>
                     <td><p>A</p></td>
                     <td><p>B</p></td>
                     <td><p>C</p></td>
